<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DailyQuoteFragment">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

   <androidx.cardview.widget.CardView
       android:id="@+id/card_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="@dimen/card_corner"
       android:layout_margin="@dimen/margin_medium"
       android:elevation="@dimen/cardview_default_elevation">


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">


         <TextView
             android:id="@+id/txt_smart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_medium"
             android:textSize="@dimen/text_huge"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_like"
                android:tag="@string/empty_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_favorite_border_green_48px"
                android:contentDescription="@string/like"
                android:layout_margin="@dimen/margin_medium"/>

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:scrollbarSize="@dimen/size_heart"
                android:background="@color/white"
                android:src="@drawable/ic_share_black_48px"
                android:contentDescription="@string/share" />

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="@dimen/text_large"
                android:textStyle="italic"
                android:layout_margin="@dimen/margin_medium" />


         </LinearLayout>


      </LinearLayout>


   </androidx.cardview.widget.CardView>

    </ScrollView>

</FrameLayout>